CHORE: Replace default 40x and 50x pages

--- a/public/404.html
+++ b/public/404.html
@@ -1,58 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-  }
+  <head>
+  <meta content='text/html; charset=UTF-8' http-equiv='Content-Type'>
+  <meta charset='utf-8'>
+  <meta content='width=device-width, initial-scale=1.0' name='viewport'>
+  <title>Playmotrade</title>
+  <link href="/system/static_css/main.css" media="all" rel="stylesheet" />
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount','UA-52571681-1']);
+    _gaq.push(['_setDomainName','auto']);
+    _gaq.push(['_trackPageview']);
+    (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
+  <link href='/img/favicon/favicon.png' rel='shortcut icon'>
 
-  div.dialog {
-    width: 25em;
-    margin: 4em auto 0 auto;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 4em 0 4em;
-  }
+  </head>
 
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+  <body>
+  <div class='navbar navbar-inverse'>
+    <div class='navbar-inner no-border-navbar'>
+      <div class='container'>
+        <a class="brand" href="http://playmotrade.com/"><img alt="Playmotrade® - Unofficial Playmobil® Marketplace" src="/img/logo.png" />
+        </a><div class='nav-collapse collapse'>
+      </div>
+      </div>
+    </div>
+    </div>
 
-  body > p {
-    width: 33em;
-    margin: 0 auto 1em;
-    padding: 1em 0;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow:0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
-</head>
+    <div class='admin-form'>
+      <div class='container-fluid'>
+        <div class='row-fluid'>
+          <div class='span12'>
+            <div class='widget worange'>
+              <div class='widget-head'>
+                <i class='icon-question-sign'></i>
+                Error
+              </div>
+              <div class='widget-content'>
+                <div class='padd'>
+                  <h1>Page Not Found</h1>
+                  <p>
+                  The page you requested could not be found on this site. Please check the URL to ensure that it has been typed properly or try reloading the previous page again.
+                  </p>
+                </div>
+              </div>
+              <div class='widget-foot'>
+              <div class="horizontal-links">
+                <a href="http://playmotrade.com">Home</a> | <a href="http://playmotrade.com/pages/about">About Us</a> | <a href="http://playmotrade.com/pages/help">Contact us</a> | <a href="http://playmotrade.com/pages/faq">FAQ</a>
+              </div>
 
-<body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <p>If you are the application owner check the logs for more information.</p>
-</body>
+  </body>
 </html>
